--- a/codefresh.yml
+++ b/codefresh.yml
@@ -2,6 +2,6 @@ version: '1.0'
 
 steps:
     unit-test-jim:
-        image: golang:latest
+        image: golang:onbuild
         commands:
           - go test
